# pscl

./: 75.st_nPoints10000000_div30.txt  75.st_nPoints1000000_div30.txt  75.st_nPoints1000000_div50.txt  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  I0_fpdc.dmat  I1_fpdc.dmat  I2_fpdc.dmat  I4_fpdc.dmat  I_brute.dmat  I_fcpw.dmat  Makefile  README.md  UV.dmat  cmake_install.cmake  compareFPDC.py  culvert_res1.stl  culvert_res2.stl  culvert_res3.stl  culvert_res4.stl  culvert_res5.stl  d75.st_nPoints10000004_div20.txt  d75.st_nPoints10000004_div30.txt  d75.st_nPoints10000004_div50.txt  d75.st_nPoints10000004_div90.txt  d75.st_nPoints1000004_div10.txt  d75.st_nPoints1000004_div15.txt  d75.st_nPoints1000004_div20.txt  d75.st_nPoints1000004_div25.txt  d75.st_nPoints1000004_div30.txt  d75.st_nPoints1000004_div35.txt  d75.st_nPoints1000004_div40.txt  d75.st_nPoints1000004_div45.txt  d75.st_nPoints1000004_div50.txt  d75.st_nPoints1000004_div55.txt  d75.st_nPoints1000004_div60.txt  d75.st_nPoints1000004_div65.txt  d75.st_nPoints1000004_div70.txt  d75.st_nPoints1000004_div75.txt  (+47 more)
fcpwtest/: CMakeLists.txt  Makefile  cmake_install.cmake  fcpwtest.cpp  fcpwtest.h
fpdc/: polygon_wall copy.cpp  polygon_wall.cpp  polygon_wall.h  polygon_wall_junto.cpp  polygon_wall_junto.h  polygon_wall_sec.cpp  polygon_wall_sec.h  polygon_wallbackup.cpp  stl_reader.h
output/: bm0_fpdc.txt  bm0nP1000000res10_fpdc.txt  bm0nP1000000res15_fpdc.txt  bm0nP1000000res20_fpdc.txt  bm0nP1000000res25_fpdc.txt  bm0nP1000000res30_fpdc.txt  bm0nP1000000res35_fpdc.txt  bm0nP1000000res40_fpdc.txt  (+323 more)
(+2 files in other folders)
